feat : tailwind import 및 pretendard 폰트 설정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/likelion.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>영남대 멋쟁이사자처럼 14기</title>
+     <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
